<resources>
  <!-- Board -->
  <string name="description_board_controllable_board">Controllable board</string>
  <string name="description_board_reverse">Reverse board</string>
  <string name="description_board_reset">Reset board</string>
  <string name="description_board_back">Back</string>
  <string name="description_board_next">Next</string>
  <string name="description_board_save">Save</string>
  <string name="description_board_delete">Delete</string>
  <string name="description_board_next_move">Play %1$s</string>
  <string name="description_board_tile">Tile %1$s</string>
  <string name="description_board_piece">Piece %1$s</string>

  <!-- Navigation -->

  <!-- Explore control bar -->
  <string name="description_reset">Reset</string>
  <string name="description_reverse">Reverse</string>
  <string name="description_forward">Forward</string>
  <string name="description_toggle_eval_bar">Toggle evaluation bar</string>

  <!-- Settings -->
  <string name ="settings_preferences_file">preferences</string>
</resources>
